--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "global": "^4.4.0",
+    "json-server": "^0.17.3",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
